Add basic PHP configuration

--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,7 @@
 				<input type="submit" value="Sign Up" />
 			</fieldset>
 		</form>
-		<dialog id="dialog1">
+		<dialog id="dialog1" open="yes">
 			<noscript>This site requires JavaScript to be enabled.</noscript>
 		</dialog>
 		<script type="text/javascript" src="script.js"></script>
