Add session configuration and sign up request test

--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<form id="form1">
-			<fieldset name="fieldset1">
+			<fieldset name="fieldset">
 				<legend>Sign Up</legend>
 				<input autocomplete="username" autofocus="yes" name="username" placeholder="Username" required="yes" value="username123" />
 				<input name="password" placeholder="Password" required="yes" type="password" value="password123" />
