--- a/html/index.html
+++ b/html/index.html
@@ -11,17 +11,18 @@
 		<link href="style.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
-		<form id="form1">
-			<fieldset name="fieldset">
-				<legend>Sign Up</legend>
-				<input autocomplete="username" autofocus="yes" name="username" placeholder="Username" required="yes" value="username123" />
-				<input name="password" placeholder="Password" required="yes" type="password" value="password123" />
-				<input name="confirmation" placeholder="Password confirmation" required="yes" type="password" value="password123" />
-				<input type="submit" value="Sign Up" />
-			</fieldset>
+		<noscript>Sorry, this site requires JavaScript enabled.</noscript>
+		<form id="signup">
+			<legend>Sign Up</legend>
+			<input autocomplete="username" autofocus="yes" name="username" pattern="[\w\-.]{8,}" placeholder="Username" required="yes" value="username123" />
+			<input name="password" pattern="[\w\x20-\x40]{8,}" placeholder="Password" required="yes" type="password" value="password123" />
+			<input name="confirmation" placeholder="Password confirmation" required="yes" type="password" value="password123" />
+			<input name="send" type="submit" value="Sign Up" />
 		</form>
-		<dialog id="dialog1" open="yes">
-			<noscript>This site requires JavaScript to be enabled.</noscript>
+		<dialog id="message">
+			<form method="dialog">
+				<input type="button" value="OK" />
+			</form>
 		</dialog>
 		<script type="text/javascript" src="script.js"></script>
 	</body>
