--- a/html/index.html
+++ b/html/index.html
@@ -11,14 +11,14 @@
 		<link href="style.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
-		<form id="signup">
+		<form id="signupForm">
 			<p>Sign Up</p>
 			<input autocomplete="username" autofocus="yes" name="username" pattern="[\w\-.]{8,}" placeholder="Username" required="yes" value="username123" />
 			<input name="password" pattern="[\w\x20-\x40]{8,}" placeholder="Password" required="yes" type="password" value="password123" />
 			<input name="confirmation" placeholder="Password confirmation" required="yes" type="password" value="password123" />
 			<input type="submit" value="Sign Up" />
 		</form>
-		<dialog id="message" open="yes">
+		<dialog id="alertDialog" open="yes">
 			<noscript>Sorry, this site requires JavaScript enabled.</noscript>
 		</dialog>
 		<script type="text/javascript" src="script.js"></script>
