Keep testing sign up functions

--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
 			<input type="submit" value="Sign Up" />
 		</form>
 		<dialog id="alertDialog" open="yes">
-			<noscript>Sorry, this site requires JavaScript enabled.</noscript>
+			<noscript>Sorry, this site requires JavaScript to be enabled.</noscript>
 		</dialog>
 		<script type="text/javascript" src="script.js"></script>
 	</body>
