--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'self'; connect-src 'self'; img-src 'self'; style-src 'self'; form-action 'self'; base-uri 'none';" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="Project description" />
 		<meta name="author" content="Project author" />
@@ -11,16 +10,54 @@
 		<link href="style.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
-		<form id="signupForm">
-			<p>Sign Up</p>
-			<input autocomplete="username" autofocus="yes" name="username" pattern="[\w\-.]{8,}" placeholder="Username" required="yes" value="username123" />
-			<input name="password" pattern="[\w\x20-\x40]{8,}" placeholder="Password" required="yes" type="password" value="password123" />
-			<input name="confirmation" placeholder="Password confirmation" required="yes" type="password" value="password123" />
-			<input type="submit" value="Sign Up" />
-		</form>
-		<dialog id="alertDialog" open="yes">
-			<noscript>Sorry, this site requires JavaScript to be enabled.</noscript>
+		<section id="signup">
+			<header>
+				<h1>Seguros</h1>
+				<a href="#signin">Sign In</a>
+			</header>
+			<form>
+				<h2>Sign Up</h2>
+				<input autocomplete="username" autofocus="yes" name="username" pattern="[\w\-.]{8,}" placeholder="Username" required="yes" value="username123" />
+				<input name="password" pattern="[\w\x20-\x40]{8,}" placeholder="Password" required="yes" type="password" value="password123" />
+				<input name="confirmation" placeholder="Password confirmation" required="yes" type="password" value="password123" />
+				<input type="submit" value="Sign Up" />
+				<p><a href="#signin">Already signed up? Sign in!</a></p>
+			</form>
+			<footer>
+				<p><a href="#about">About</a> | Privacy | Terms</p>
+			</footer>
+		</section>
+		<section id="signin" class="hidden">
+			<header>
+				<h1>Seguros</h1>
+				<a href="#signup">Sign Up</a>
+			</header>
+			<form>
+				<h2>Sign In</h2>
+				<input autocomplete="username" autofocus="yes" name="username" pattern="[\w\-.]{8,}" placeholder="Username" required="yes" value="username123" />
+				<input name="password" pattern="[\w\x20-\x40]{8,}" placeholder="Password" required="yes" type="password" value="password123" />
+				<input type="submit" value="Sign In" />
+				<p><a href="#signup">Don't have an account? Sign up!</a></p>
+			</form>
+			<footer>
+				<p><a href="#about">About</a> | Privacy | Terms</p>
+			</footer>
+		</section>
+		<section id="about" class="hidden">
+			<header>
+				<a href="#back">Back</a>
+				<h1>Seguros</h1>
+				<a href="#signup">Sign Up</a>
+				<a href="#signin">Sign In</a>
+			</header>
+			<article>
+				<h2>About</h2>
+				<p>Version 0.1</p>
+			</article>
+		</section>
+		<dialog id="dialog1" open="yes">
+			<noscript><p>Sorry, this site requires JavaScript.</p></noscript>
 		</dialog>
-		<script type="text/javascript" src="script.js"></script>
+		<script src="script.js" type="text/javascript"></script>
 	</body>
 </html>
