--- a/html/index.html
+++ b/html/index.html
@@ -10,54 +10,14 @@
 		<link href="style.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
-		<section id="signup">
-			<header>
-				<h1>Seguros</h1>
-				<a href="#signin">Sign In</a>
-			</header>
-			<form>
-				<h2>Sign Up</h2>
-				<input autocomplete="username" autofocus="yes" name="username" pattern="[\w\-.]{8,}" placeholder="Username" required="yes" value="username123" />
-				<input name="password" pattern="[\w\x20-\x40]{8,}" placeholder="Password" required="yes" type="password" value="password123" />
-				<input name="confirmation" placeholder="Password confirmation" required="yes" type="password" value="password123" />
-				<input type="submit" value="Sign Up" />
-				<p><a href="#signin">Already signed up? Sign in!</a></p>
-			</form>
-			<footer>
-				<p><a href="#about">About</a> | Privacy | Terms</p>
-			</footer>
-		</section>
-		<section id="signin" class="hidden">
-			<header>
-				<h1>Seguros</h1>
-				<a href="#signup">Sign Up</a>
-			</header>
-			<form>
-				<h2>Sign In</h2>
-				<input autocomplete="username" autofocus="yes" name="username" pattern="[\w\-.]{8,}" placeholder="Username" required="yes" value="username123" />
-				<input name="password" pattern="[\w\x20-\x40]{8,}" placeholder="Password" required="yes" type="password" value="password123" />
-				<input type="submit" value="Sign In" />
-				<p><a href="#signup">Don't have an account? Sign up!</a></p>
-			</form>
-			<footer>
-				<p><a href="#about">About</a> | Privacy | Terms</p>
-			</footer>
-		</section>
-		<section id="about" class="hidden">
-			<header>
-				<a href="#back">Back</a>
-				<h1>Seguros</h1>
-				<a href="#signup">Sign Up</a>
-				<a href="#signin">Sign In</a>
-			</header>
-			<article>
-				<h2>About</h2>
-				<p>Version 0.1</p>
-			</article>
-		</section>
-		<dialog id="dialog1" open="yes">
-			<noscript><p>Sorry, this site requires JavaScript.</p></noscript>
-		</dialog>
+		<form id="signup">
+			<h2>Sign Up</h2>
+			<input autocomplete="username" autofocus="yes" name="username" pattern="[\w\-.]{8,}" placeholder="Username" required="yes" value="username123" />
+			<input name="password" pattern="[\w\x20-\x40]{8,}" placeholder="Password" required="yes" type="password" value="password123" />
+			<input name="confirmation" placeholder="Password confirmation" required="yes" type="password" value="password123" />
+			<input type="submit" value="Sign Up" />
+			<!-- <p><a href="#signin">Already signed up? Sign in!</a></p> -->
+		</form>
 		<script src="script.js" type="text/javascript"></script>
 	</body>
 </html>
